Fix ClientID issue and add .db to gitignore

--- a/CryptoRates/appsettings.json
+++ b/CryptoRates/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Authentication:Google": {
+    "ClientId": "68283116311-cc63js0f8q47efrvkjvva37026cg2b2u.apps.googleusercontent.com",
+    "ClientSecret": "-KnhEbyQO5S2aZy-acuNWWqo"
+  },
   "AllowedHosts": "*"
 }
