--- a/CryptoRates/appsettings.json
+++ b/CryptoRates/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CryptoRates-95146FE9-CBD4-4D99-89FB-1E4208FE1DFA;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SQLite": "Data Source=cryptoDB.db"
   },
   "Logging": {
     "LogLevel": {
