Switch to localDB, give a task to Hangfire
Hangfire successfully performs the task (no errors), but the table in database remains unchanged. Weird

--- a/CryptoRates/appsettings.json
+++ b/CryptoRates/appsettings.json
@@ -1,12 +1,14 @@
 {
   "ConnectionStrings": {
-    "SQLite": "Data Source=cryptoDB.db"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB; Database=CryptoRatesDB; Initial Catalog=master; Integrated Security=True;",
+    "HangfireConnection": "Data Source=(localdb)\\MSSQLLocalDB; Database=HangfireDB; Integrated Security=SSPI;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Hangfire": "Information"
     }
   },
   "Authentication:Google": {
