--- a/CryptoRates/appsettings.json
+++ b/CryptoRates/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB; Database=CryptoRatesDB; Initial Catalog=master; Integrated Security=True;",
-    "HangfireConnection": "Data Source=(localdb)\\MSSQLLocalDB; Database=HangfireDB; Integrated Security=SSPI;"
+    "DefaultConnection": "Data Source=COMPUTER\\SQLEXPRESS; Database=CryptoDB; Integrated Security=True; Connect Timeout=30; Encrypt=False; TrustServerCertificate=False; ApplicationIntent=ReadWrite; MultiSubnetFailover=False",
+    "HangfireConnection": "Data Source=COMPUTER\\SQLEXPRESS; Database=HangfireDB; Integrated Security=True; Connect Timeout=30; Encrypt=False; TrustServerCertificate=False; ApplicationIntent=ReadWrite; MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
