Moving to Angular, not done yet

--- a/CryptoRates/appsettings.json
+++ b/CryptoRates/appsettings.json
@@ -11,9 +11,16 @@
       "Hangfire": "Information"
     }
   },
+  "IdentityServer": {
+    "Clients": {
+      "CryptoRates": {
+        "Profile": "IdentityServerSPA"
+      }
+    }
+  },
   "Authentication:Google": {
-    "ClientId": "244968856462-p7vd96folob4vsrbecogai55nsriveb9.apps.googleusercontent.com",
-    "ClientSecret": "kxCJtj7EZk8mmNrhUWosVHqm"
+    "ClientId": "244968856462-mh5aoe8tlrompiaqi586tcpd8n9b2b20.apps.googleusercontent.com",
+    "ClientSecret": "WZqTJISjVn52F4m_AEBt8qd5"
   },
   "AllowedHosts": "*"
 }
