--- a/CryptoRates/appsettings.json
+++ b/CryptoRates/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=COMPUTER\\SQLEXPRESS; Database=CryptoDB; Integrated Security=True; Connect Timeout=30; Encrypt=False; TrustServerCertificate=False; ApplicationIntent=ReadWrite; MultiSubnetFailover=False",
-    "HangfireConnection": "Data Source=COMPUTER\\SQLEXPRESS; Database=HangfireDB; Integrated Security=True; Connect Timeout=30; Encrypt=False; TrustServerCertificate=False; ApplicationIntent=ReadWrite; MultiSubnetFailover=False",
-    "CryptoRatesContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CryptoRates;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "HangfireConnection": "Data Source=COMPUTER\\SQLEXPRESS; Database=HangfireDB; Integrated Security=True; Connect Timeout=30; Encrypt=False; TrustServerCertificate=False; ApplicationIntent=ReadWrite; MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
