Still working on adding new pairs

--- a/CryptoRates/CryptoRates.csproj
+++ b/CryptoRates/CryptoRates.csproj
@@ -38,10 +38,12 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\app\currency.ts" />
+    <None Remove="ClientApp\src\app\pair.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\currency.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\pair.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
