Adding and deleting pairs work

--- a/CryptoRates/CryptoRates.csproj
+++ b/CryptoRates/CryptoRates.csproj
@@ -42,8 +42,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <TypeScriptCompile Include="ClientApp\src\app\currency.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\pair.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\core\models\currency.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\core\models\pair.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
