--- a/CryptoRates/ClientApp/package.json
+++ b/CryptoRates/ClientApp/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "8.2.12",
     "@angular/platform-browser-dynamic": "8.2.12",
     "@angular/platform-server": "8.2.12",
+    "@angular/pwa": "^0.900.3",
     "@angular/router": "8.2.12",
+    "@angular/service-worker": "8.2.12",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.4.1",
