--- a/CryptoRates/appsettings.json
+++ b/CryptoRates/appsettings.json
@@ -22,5 +22,11 @@
     "ClientId": "244968856462-mh5aoe8tlrompiaqi586tcpd8n9b2b20.apps.googleusercontent.com",
     "ClientSecret": "WZqTJISjVn52F4m_AEBt8qd5"
   },
+  "SmtpClient": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "kubasovra@gmail.com",
+    "Password": "fdxmtexocuvnhkrg"
+  },
   "AllowedHosts": "*"
 }
