--- a/CryptoRates/appsettings.json
+++ b/CryptoRates/appsettings.json
@@ -19,14 +19,18 @@
     }
   },
   "Authentication:Google": {
-    "ClientId": "244968856462-mh5aoe8tlrompiaqi586tcpd8n9b2b20.apps.googleusercontent.com",
-    "ClientSecret": "WZqTJISjVn52F4m_AEBt8qd5"
+    "ClientId": "<ClientId here>",
+    "ClientSecret": "<Secret here>"
+    //"ClientId": "244968856462-mh5aoe8tlrompiaqi586tcpd8n9b2b20.apps.googleusercontent.com",
+    //"ClientSecret": "WZqTJISjVn52F4m_AEBt8qd5"
   },
   "SmtpClient": {
     "Host": "smtp.gmail.com",
     "Port": "587",
-    "Username": "kubasovra@gmail.com",
-    "Password": "fdxmtexocuvnhkrg"
+    //"Username": "kubasovra@gmail.com",
+    //"Password": "fdxmtexocuvnhkrg",
+    "username": "<Username here>",
+    "password": "<App password here>"
   },
   "AllowedHosts": "*"
 }
