Very basic user system is ready

--- a/CryptoRates/appsettings.json
+++ b/CryptoRates/appsettings.json
@@ -11,6 +11,9 @@
       "Hangfire": "Information"
     }
   },
+  "JWT": {
+    "Secret":  "sdfweofgiejkrogk124987jd1908247sdf9081k2s8u"
+  },
   "IdentityServer": {
     "Clients": {
       "CryptoRates": {
